<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl"
    android:padding="16dp"
    tools:context=".ExamActivity">
    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/score_0"
        android:textColor="#fcfafa"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_score"
        android:freezesText="true"
        android:text="@string/question_1_x"
        android:textColor="#fff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:freezesText="true"
        android:text="@string/dificulty"
        android:textColor="#fff"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_confirm_next"
        android:layout_below="@+id/text_view_question_count">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/question"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@android:color/holo_green_light"
                android:freezesText="true"
                android:text="@string/option1"
                android:textSize="12sp"/>

            <CheckBox
                android:id="@+id/check_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textSize="12sp"
                android:text="@string/option2" />

            <CheckBox
                android:id="@+id/check_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textSize="12sp"
                android:text="@string/option3" />

            <CheckBox
                android:id="@+id/check_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textSize="12sp"
                android:text="@string/option4" />

            <CheckBox
                android:id="@+id/check_option5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textSize="12sp"
                android:text="@string/option5" />

            <CheckBox
                android:id="@+id/check_option6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textSize="12sp"
                android:text="@string/option6" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_above="@+id/button_confirm_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>
    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#8000"
        android:drawableLeft="@drawable/ic_check"
        android:freezesText="true"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />


</RelativeLayout>