<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    android:padding="16dp"
    tools:context="com.karaca.mmcertificate.StartingScreenActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#8000"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/program_head"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />
        <TextView
            android:id="@+id/text_view_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/high_score_0"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button_start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_play"
            android:background="@drawable/button"
            android:text="@string/start"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textAlignment="textStart"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/spinner_title"/>
        <Spinner
            android:id="@+id/spinner_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:addStatesFromChildren="true"
            android:background="@android:color/darker_gray"
            android:popupBackground="@android:color/darker_gray"
            android:prompt="@string/spinner_title">

        </Spinner>
    </LinearLayout>



</RelativeLayout>
